--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -267,4 +267,61 @@ year={2016},
 month={mai}
 }
 
+@misc{access_env_vars_dockerfile,
+title={{How do I access environment variables inside a Dockerfile? | Aptible Support}},
+note={\url{https://support.aptible.com/topics/paas/how-to-access-environment-variables-inside-dockerfile/}},
+year={2016},
+month={juin}
+}
 
+@misc{capabilities_linux_kernel,
+title={{capabilities(7) - Linux manual page}},
+note={\url{http://man7.org/linux/man-pages/man7/capabilities.7.html}},
+year={2016},
+month={juin}
+}
+
+@misc{show_memory_usage_docker_lxc,
+title={{Show memory usage of all docker / lxc containers}},
+author={{David Winterbottom}},
+note={\url{http://www.commandlinefu.com/commands/view/13708/show-memory-usage-of-all-docker-lxc-containers}},
+year={2016},
+month={juin}
+}
+
+@misc{gist_mysql_python,
+title={{Examples of Mysql programming in Python}},
+author={{Vineet Naik}},
+note={\url{https://gist.github.com/naiquevin/1746005}},
+year={2016},
+month={juin}
+}
+
+@misc{bug_mysql_alpine,
+title={{Bug 4768: libmysqlclient-dev is not available in 3.2 - Alpine Linux - Alpine Linux Development}},
+note={\url{https://bugs.alpinelinux.org/issues/4768}},
+year={2016},
+month={juin}
+}
+
+@misc{reddit_mariadb,
+title={{Created a container from alpine, installed MariaDB. MariaDB won't start}},
+note={\url{https://www.reddit.com/r/docker/comments/3ucc8y/help_created_a_container_from_alpine_installed/}},
+year={2016},
+month={juin}
+}
+
+@misc{miguel_grinberg_restful_api,
+title={{Designing a RESTful API with Python and Flask}},
+author={{Miguel Grinberg}},
+note={\url{http://blog.miguelgrinberg.com/post/designing-a-restful-api-with-python-and-flask}},
+year={2016},
+month={juin}
+}
+
+@misc{stackoverflow_docker_securing_pwd,
+title={{Docker and securing passwords}},
+note={\url{http://stackoverflow.com/questions/22651647/docker-and-securing-passwords}},
+year={2016},
+month={juin}
+}
